<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.accolite.sports.Contacts"
    tools:ignore="MergeRootFrame" >

    
    
    <EditText
	    android:id="@+id/singleregister_name"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/name"
	    android:inputType="textNoSuggestions"
	    android:textSize="10pt">
	</EditText>

    <EditText 
	    android:id="@+id/singleregister_email"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/email"
	    android:inputType="textEmailAddress"
	    android:textSize="10pt">
	</EditText>
	
	<CheckBox
	    android:id="@+id/chess"
	    android:layout_height="wrap_content"
	    android:text="@string/chess"
	    android:layout_width="fill_parent">
	</CheckBox>
	
	<CheckBox
	    android:id="@+id/carroms_single"
	    android:layout_height="wrap_content"
	    android:text="@string/carromssingles"
	    android:layout_width="fill_parent">
	</CheckBox>
	
	
	 <Button
        android:id="@+id/teamRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_gravity="center_horizontal|top"        
        android:onClick="teamRegister"
        android:text="@string/teamRegister"
          />
    
    

</LinearLayout>